--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "redux-token-auth": "^0.19.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
