add projects, tasks, comments

--- a/package.json
+++ b/package.json
@@ -28,18 +28,24 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "immutability-helper": "^2.7.0",
     "jest": "20.0.4",
+    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.4.0",
+    "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.5.0",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.4.1",
+    "react-images-upload": "^1.1.99",
+    "react-moment": "^0.7.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^6.1.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "redux-token-auth": "^0.19.0",
