--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-images-upload": "^1.1.99",
+    "react-modal": "^3.4.5",
     "react-moment": "^0.7.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
